[package]
name = "bench-client"
version = "0.1.0"
authors = ["Minghao Xie <mhxie@ucsc.edu>"]
edition = "2018"

[dependencies]
tokio = { version = "1", features = ["full"] }
netlify_lambda = { package = "netlify_lambda", version = "0.2.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

mock = { path = "../mock" }
stat = { path = "../stat" }
