[package]
name = "mock"
version = "0.1.0"
authors = ["Minghao Xie <mhxie@ucsc.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
stat = { path = "../stat" }
rand = "0.8.2"